--- a/app/assets/stylesheets/api/pokemon.scss
+++ b/app/assets/stylesheets/api/pokemon.scss
@@ -2,29 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//
 
-ul.pokelist {
-  display: block;
-  list-style: none;
-  justify-content: center;
+.page {
+  display: flex;
+  height: 100%;
+}
+
+.showPokemon {
   align-items: center;
-
-}
-div.pokeitem{
-  background-color: lightgray;
-  display: inline-block;
-  border: 1px solid black;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
 }
 
-li.pokename{
-  font-size: 16px;
-  color: blue;
+.pokemonStats {
+  width: 20px;
+  margin: auto;
 }
 
-div.pokeitem:hover > li.pokename{
-  color: black;
+ul.pokelist{
+  width: 20%;
+  border: 2px solid black;
+  margin-left: 30px;
+  height: auto;
+  overflow: scroll;
 }
-div.pokeitem:hover{
-  background-color: red;
+
+.pokeimage{
+  width: 40px;
+  height: 40px;
+}
+
+.pokename{
+  padding: 0;
+  list-style: none;
+  border-bottom: .5px solid black;
+  border-top: .5px solid black;
 }
